# mork-syscall

./: Cargo.toml  README.md
src/: lib.rs
src/invocation/: cspace_handler.rs  memory_handler.rs  mod.rs  task_handler.rs
src/invocation/cspace_handler/: alloc_handler.rs  mod.rs
src/invocation/memory_handler/: mod.rs
src/invocation/task_handler/: mod.rs
